--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     </header>
     <main>
         <section id="intro" class="section-padding">
+            <center><h1>Welcome to Code Craft</h1></center>
             <h2>What is Code Craft?</h2>
             <p>Code Craft is a professional website that covers a lot of fields in programming like software engineering, app development, etc.</p>
         </section>
